# audible_altimeter_software

./: .dockerignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  altitude_manager.cpp  altitude_manager.hh  buzzer_sound.cpp  buzzer_sound.hh  common.cpp  common.hh  conanfile.txt  config.cpp  config.hh  display_buffer.cpp  display_buffer.hh  jump_data.hh  main.cpp  mainwindow.cpp  mainwindow.hh  megaui.cpp  megaui.hh  menu_item.cpp  menu_item.hh  sensors.cpp  sensors.hh  ui_alarms_menu.cpp  ui_alarms_menu.hh  ui_altimeter.cpp  ui_altimeter.hh  ui_base.cpp  ui_config_item_altitude_alarm.cpp  ui_config_item_enum.cpp  ui_config_item_enum.hh  ui_config_item_int.hh  ui_display_menu.cpp  ui_display_menu.hh  ui_dz_menu.cpp  ui_dz_menu.hh  ui_log_admin_menu.cpp  (+13 more)
cmake/: output_paths.cmake
fonts/: conf.cfg  fontlibrary.c  fontlibrary.h
log_viewer/: CMakeLists.txt  jump.cpp  jump.hh  jump_viewer.cpp  jump_viewer.hh  log_fetcher.cpp  log_fetcher.hh  main_log_fetcher.cpp  script_get_data.m
platform/: CMakeLists.txt
platform/qt/: CMakeLists.txt  mainwindow.cpp  mainwindow.hh
platform/xmega/: CMakeLists.txt  altimeter_mpl3115a2.cpp  altimeter_mpl3115a2.hh  altimeter_ms5805_02ba01.cpp  altimeter_ms5805_02ba01.hh  buttons.cpp  buttons.hh  buzzer.cpp  buzzer.hh  cmake_configuration.cmake  components.cpp  components.hh  cpp.hh  display_sharp.cpp  display_sharp.hh  gps_sim33ela.cpp  gps_sim33ela.hh  interrupts.cpp  interrupts.hh  main_mcu.cpp  mcu_conf.hh  memory.cpp  memory.hh  power.cpp  power.hh  readme.txt  sensor_controller.cpp  sensor_controller.hh  setup.cpp  setup.hh  timer.cpp  timer.hh  usb.cpp  usb.hh
platform/xmega/backup/: main_mcu.cpp
platform/xmega/lufa_config/: CMakeLists.txt  Descriptors.c  Descriptors.h
ui/: CMakeLists.txt  ui_advanced_menu.cpp  ui_advanced_menu.hh  ui_alarms_menu.cpp  ui_alarms_menu.hh  ui_altimeter.cpp  ui_altimeter.hh  ui_base.hh  ui_config_item_altitude_alarm.cpp  ui_config_item_altitude_alarm.hh  ui_config_item_beep_option.cpp  ui_config_item_beep_option.hh  ui_config_item_bool.cpp  ui_config_item_bool.hh  ui_config_item_enum.hh  ui_config_item_int.hh  ui_display_menu.cpp  ui_display_menu.hh  ui_dz_menu.hh  ui_log_admin_menu.cpp  ui_log_admin_menu.hh  ui_log_menu.cpp  ui_log_menu.hh  ui_main.cpp  ui_main.hh  ui_main_menu.cpp  ui_main_menu.hh  ui_menu.cpp  ui_menu.hh  ui_menu_item.cpp  ui_menu_item.hh  ui_time_date_menu.hh
