ADD_LIBRARY(Ui STATIC
    ui_base.cpp ui_base.hh

    ui_main.cpp ui_main.hh
    ui_main_menu.cpp ui_main_menu.hh
    ui_altimeter.cpp ui_altimeter.hh

    ui_menu_item.cpp ui_menu_item.hh
    ui_menu.cpp ui_menu.hh
    ui_log_menu.cpp ui_log_menu.hh
    ui_alarms_menu.cpp ui_alarms_menu.hh
    ui_time_date_menu.cpp ui_time_date_menu.hh
    ui_dz_menu.cpp ui_dz_menu.hh
    ui_display_menu.cpp ui_display_menu.hh
    ui_log_admin_menu.cpp ui_log_admin_menu.hh

    ui_config_item_enum.cpp ui_config_item_enum.hh
    ui_config_item_altitude_alarm.cpp ui_config_item_altitude_alarm.hh
    ui_config_item_int.cpp ui_config_item_int.hh
    ui_config_item_bool.cpp ui_config_item_bool.hh
    )
