INCLUDE(cmake_configuration.cmake)
INCLUDE_DIRECTORIES("lufa_config/")
INCLUDE_DIRECTORIES(${LUFA_INCLUDE_DIRECTORIES})
ADD_SUBDIRECTORY("lufa_config")

FILE(GLOB LUFA_USB_C
    ${LUFA_LOCATION}/LUFA/Drivers/USB/Class/Device/
    ${LUFA_LOCATION}/LUFA/Drivers/USB/Class/Device/*)
FILE(GLOB LUFA_USB_C_CORE
    ${LUFA_LOCATION}/LUFA/Drivers/USB/Core/
    ${LUFA_LOCATION}/LUFA/Drivers/USB/Core/*.c)

FILE(GLOB_RECURSE LUFA_USB_C_PLATFORM
    ${LUFA_LOCATION}/LUFA/Drivers/USB/Core/${MCU_ARCH}/
    ${LUFA_LOCATION}/LUFA/Drivers/USB/Core/${MCU_ARCH}/*.c)

ADD_LIBRARY(Platform STATIC
    main_mcu.cpp
    ${LUFA_USB_C}
    ${LUFA_USB_C_CORE}
    ${LUFA_USB_C_PLATFORM}
    )

TARGET_LINK_LIBRARIES(Platform
    LufaConfig
    )
